--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -28,3 +28,7 @@
 [[constraint]]
   name = "github.com/labstack/echo"
   version = "3.2.5"
+
+[[constraint]]
+  name = "go.uber.org/zap"
+  version = "1.7.1"
