--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -37,3 +37,7 @@
   name = "github.com/sirupsen/logrus"
   version = "1.0.4"
 
+
+[[constraint]]
+  name = "gopkg.in/gomail.v2"
+  version = "2.0.0"
