--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -41,3 +41,7 @@
 [[constraint]]
   name = "gopkg.in/gomail.v2"
   version = "2.0.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/admpub/mail"
