--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -49,3 +49,7 @@
 [[constraint]]
   name = "github.com/jordan-wright/email"
   version = "3.0.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/benbjohnson/phantomjs"
