--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -57,3 +57,7 @@
 [[constraint]]
   name = "github.com/PuerkitoBio/goquery"
   version = "1.3.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/antchfx/htmlquery"
