--- a/glide.yaml
+++ b/glide.yaml
@@ -36,3 +36,5 @@ import:
   version: ^0.11.1
 - package: github.com/francoispqt/gojay
   version: ^0.10.8
+- package: github.com/urfave/cli
+  version: ^1.20.0
