--- a/glide.yaml
+++ b/glide.yaml
@@ -39,3 +39,5 @@ import:
 - package: github.com/urfave/cli
   version: ^1.20.0
 - package: github.com/jmoiron/sqlx
+- package: github.com/go-sql-driver/mysql
+  version: ^1.4.0
